Completed the info cards layout with the svgs on top and bottom, but I haven't refined the site just yet.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
 
         </div>
 
+        <div class="waveform" id="svgbottom">
+            <svg class="path" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 260"><path fill="#212121" fill-opacity="1" d="M 1440 256 L 1392 240 C 1344 224 1248 192 1152 197.3 C 1056 203 960 245 864 218.7 C 768 192 672 96 576 80 C 480 64 384 128 288 160 C 192 192 96 192 48 192 L 0 192 L 0 0 L 48 0 C 96 0 192 0 288 0 C 384 0 480 0 576 0 C 672 0 768 0 864 0 C 960 0 1056 0 1152 0 C 1248 0 1344 0 1392 0 L 1440 0 Z"></path></svg>
+        </div>
+
     </div>
+
+    
 
 
 
@@ -69,13 +75,12 @@
     <div class="uni">
 
         <div class="cont" id="effective">
-            <h2 class="label">Welcome</h2>
+            <h2 class="label">Get Started Today</h2>
         </div>
 
         <div class="cont">
-            <input type="text" class="textbox" onkeydown="isEnter(event)">
             <div class="contBtns">
-                <button class="btn">
+                <button class="btn bar">
                     <i class="fa-solid fa-check"></i>
                 </button>
             </div>
