Demonstration of CS:GO skin shop

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="background-color: #1B1B1B;">
 <head>
     <script src="https://kit.fontawesome.com/0ae03344f7.js" crossorigin="anonymous"></script>
-    <script src="script.js" defer></script>
+    <script src="./script.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
 <body>
     <div class="banner">
         <img class ="banEl logo" src="" alt="Logo">
-        <a class ="banEl" href="">Shop</a>
+        <a class ="banEl" href="./shop/shop.html">Shop</a>
         <a class ="banEl" href="">Vouches</a>
 
         <div class="banEl" id="logdiv">
@@ -44,9 +44,12 @@
         
         <div class="infocards">
             <div class="card" id="cardfirst">
+                <!--
                 <div class="icon">
                     <i class="icon fa-solid fa-money-bill-wave"></i>
                 </div>
+                -->
+                <h2 class="label">Money</h2>
                 <p class="info">- Affordable Prices</p>
                 <p class="info">- Money Back Guarantee</p>
                 <p class="info">- We'll beat competators by 20%</p>
@@ -54,9 +57,12 @@
             </div>
 
             <div class="card" id="cardsecond">
+                <!--
                 <div class="icon">
                     <i class="icon fa-solid fa-box-open"></i>
                 </div>
+                -->
+                <h2 class="label">Quality</h2>
                 <p class="info">- Best Quality Product</p>
                 <p class="info">- It comes in a cool box too</p>
                 <p class="info">- Unless it's a subscription</p>
@@ -65,9 +71,12 @@
             </div>
 
             <div class="card" id="cardthird">
+                <!--
                 <div class="icon">
                     <i class="icon fa-solid fa-headset"></i>
                 </div>
+                -->
+                <h2 class="label">Support</h2>
                 <p class="info">- 24/7 Support</p>
                 <p class="info">- That's right, we have support offices everywhere</p>
                 <p class="info">- LIKE EVERYWHERE</p>
@@ -101,13 +110,9 @@
     <div class="footer">
 
         <div> <img class="banEl logo" src="" alt="logo"> </div>
-
         <a href="" class="banEl">Socials</a>
-
         <a href="" class="banEl">Support</a>
-
         <p href="" class="banEl">Copyright 2023</p>
-
 
     </div>
 
