Adding the logos back to the cards

--- a/shop/shop.html
+++ b/shop/shop.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <script src="https://kit.fontawesome.com/0ae03344f7.js" crossorigin="anonymous"></script>
-    <script src="../script.js" defer></script>
+    <script src="./shop.js" defer></script>
     <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,6 +22,19 @@
         </div>
         
     </div> 
+
+    <div class="frontlayer">
+        <div></div>
+        <div></div>
+        <div class="loginbox">
+            <h2 class="label" id="loglbl">Login</h2>
+            <p class="banEl">Username</p>
+            <input type="text" class="textbox" onkeydown="isEnter(event)">
+            <p class="banEl">Password</p>
+            <input type="text" class="textbox" onkeydown="isEnter(event)">
+            <button class="btn confirm">Sign in</button>
+        </div>
+    </div>
 
     <div class="unishop">
 
@@ -65,7 +78,7 @@
 
     <div class="footer">
 
-        <div> <img class="banEl logo" src="" alt="logo"> </div>
+        <div> <img class="banEl logo" src="" alt="Logo"> </div>
         <a href="" class="banEl">Socials</a>
         <a href="" class="banEl">Support</a>
         <p href="" class="banEl">Copyright 2023</p>
